--- a/notebook - gerenciador/style.css
+++ b/notebook - gerenciador/style.css
@@ -1,7 +1,23 @@
+html, body{
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
 .botoes{
-    background-color: #ffffff;
-    border: 2px #000 solid;
-    height: 98.8vh;
+    position: fixed; 
+    bottom: 0;
+    left: 50%; 
+    transform: translateX(-50%); 
+    background-color: #D9D9D9;
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: center;
+    padding: 50px;
+    gap: 40px; 
+    width: 45%;
+    border-radius: 120px 120px 0px 0px;
+    bottom: 0;
 }
 a{
     text-decoration: none;
@@ -9,27 +25,23 @@ a{
 
 .botao-menu{
     position: relative;
-    background-color: #000;
-    color: #000;
     border: none;
     font-family: poppins;
     font-size: 20px;
-    border-radius:50px;
-    height: 280px;
-    width: 280px;
+    border-radius: 40px;
+    height: 190px;
+    width: 190px;
     margin: 10px;
-    padding-left: 20px;
-    padding-top:5px;
+    padding: 15px 15px;
+    box-sizing: border-box;
 }
 .botao-menu:hover{
-    background-color: #ff0008;
-    color: #FFFFFF;
+    background-color: #42d874;
     transition: all ease-in-out 0.4s;
     cursor: pointer;
 }
 .botao-menu:not(:hover){
-    background-color: #000;
-    color: #ff0008;
+    background-color: #323232;
     transition: all ease-in-out 0.4s;
 }
 div.single-input{
@@ -42,35 +54,40 @@ div.single-input .label{
     position: absolute;
     left: 0;
     bottom: 5px;
-    color: #000;
+    color: #ffffff;
     cursor: text;
     transition: 0.4s ease-in-out;
 }
 div.single-input .input{
     width: 100%;
-    color: #ff0008;
+    background-color: #323232;
+    color: #ffffff;
     border: 0;
-    border-bottom: 2px solid #000;
+    border-bottom: 2px solid #ffffff;
     outline: 0;
     font-size: 15px;
 }
 div.single-input .input:focus,
 div.single-input .input:valid{
-    border-bottom: 2px solid #ff0008;
+    border-bottom: 2px solid #42d874;
 }
 div.single-input .input:focus ~ label,
 div.single-input .input:valid ~ label{
+    color: #42d874;
     transform: translateY(-24px);
     font-size: 12px;
     transition: 0.4s ease-in-out;
 }
 .form {
-    margin: 0 auto; 
-    border: #000 2px solid;
+    border-radius: 90px;
+    background-color: #323232;
     padding: 50px;
     width: 30%;
     z-index: 2;
     font-family: poppins;
+}
+.form h1{
+    color: white;
 }
 input{
     font-family: poppins;
@@ -80,21 +97,20 @@ input{
     font-size: 15px;
     width: 20%;
     height: 40px;
-    border: 2px solid #000;
+    background-color: #ffffff;
     border-radius: 10px;
-    color: #000;
+    border: none;
+    color: #323232;
     margin: 1%;
 }
 .botao:hover{
-    background-color: #ff0008;
-    border: #ff0008;
+    background-color: #42d874;
     color: white;
     cursor: pointer;
     transition: all 0.2s ease-in;
 }
 .botao:not(:hover){
-    background-color: white;
-    color: #000;
+    background-color: #ffffff;
     transition: all 0.2s ease-in;
 }
 .botao:active{
@@ -107,11 +123,17 @@ select{
     border: none;
     font-family: poppins;
     outline: none;
-    border-radius: 10px;
+    border-radius: 5px;
+    background-color: #323232;
+    color: #ffffff;
+    border: 2px solid #ffffff;
 }
 select:valid{
-    color: #ff0008;
+    color: #ffffff;
+    border: 2px solid #42d874;
 }
-select:valid ~ label{
-    color: #ff0008
+main{
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
 }
